# RustSynth

./: .dockerignore  .gitignore  ANSWER.md  API_GRAPH_GUIDE.md  API_GRAPH_IMPLEMENTATION.md  ARCHITECTURE.md  BasicType.json  CAPABILITY_ANNOTATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FIXED_ISSUES.md  IMPROVEMENTS.md  PROJECT_ARCHITECTURE.md  PROJECT_PROMPT.md  PROJECT_SUMMARY.md  README-CN.md  README.md  SELF_TYPE_RESOLUTION_FIXED.md  SELF_TYPE_RESOLUTION_STATUS.md  TODO_TRACKING.md  TOKEN_LIFETIME_IMPLEMENTATION.md  USAGE.md  USAGE_GUIDE.md  api_graph.dot  api_graph_fixed.dot  api_graph_g.dot  api_graph_new.dot  apigraph.dot  base64.json  base64_1.json  blanket_impl_summary.txt  cp_net.dot  cp_net.json  demo_commands.sh  fuzz.txt  generated_test_case.rs  ir_graph.dot  ir_graph.json  net.dot  (+20 more)
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: indexed_crate.rs
benchmarks/bench_assoc_type/: Cargo.toml
benchmarks/bench_cap_alias_diff_cap/: Cargo.toml
benchmarks/bench_cap_copy_reuse/: Cargo.toml
benchmarks/bench_cap_freeze_unfreeze/: Cargo.toml
benchmarks/bench_cap_move_vs_copy/: Cargo.toml
benchmarks/bench_cap_own_frz_blk/: Cargo.toml
benchmarks/bench_copy_clone/: Cargo.toml
benchmarks/bench_ctor_chain/: Cargo.toml
benchmarks/bench_drop_unfreeze/: Cargo.toml
benchmarks/bench_generic_container/: Cargo.toml
benchmarks/bench_lifetime_nest/: Cargo.toml
benchmarks/bench_mixed_ambig_provider/: Cargo.toml
benchmarks/bench_mixed_ctor_borrow_proj/: Cargo.toml
benchmarks/bench_mixed_long_chain/: Cargo.toml
benchmarks/bench_move_copy/: Cargo.toml
benchmarks/bench_multi_borrow/: Cargo.toml
benchmarks/bench_mut_borrow/: Cargo.toml
benchmarks/bench_mut_reborrow/: Cargo.toml
docs/: assumptions.md  benchmark_refinement.md  evaluation_notes.md  labeled_petri_net.md
experiments/: analyze_results.py  benchmark_refinement.py  mutator.py  render_figures.py  render_tables.py  rq1_consistency.py  rq1_soundness.py  rq2_ablation.py  rq3_downstream.py  run_all.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
generated_examples/: 1_api_sequence_with_placeholders.rs  1_full_sequence.rs  2_api_trace.txt  2_trace_only.txt  3_llm_prompt.md  3_with_placeholders.rs  4_minimal_harness.rs  4_stats.json  5_deepseek_completed.rs  5_llm_prompt.md  6_llm_format.md  7_stats.json  reachability_graph.dot
graph/: ir_graph.dot  ir_graph.json  ir_graph_debug.txt  petri_net.dot  petri_net.json  petri_net.pnml
out2/: petri_net.dot
paper/: main.tex  sample-sigconf.tex  software.bib
results/: summary.md
rustsynth/: __init__.py  cli.py
rustsynth_pcpn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: is_version_already_uploaded.sh  regenerate_test_rustdocs.sh  test_crates.sh
src/: api_extract.rs  api_graph.rs  apigraph.rs  attributes.rs  canonicalize.rs  config.rs  emit.rs  emitter.rs  exported_name.rs  extract.rs  hashtables.rs  indexed_crate.rs  item_flags.rs  lib.rs  lifetime_analyzer.rs  main.rs  model.rs  pcpn.rs  petri_net_traits.rs  pipeline.rs  rustdoc_loader.rs  rustdoc_schema.graphql  sealed_trait.rs  search.rs  simulator.rs  transition.rs  type_model.rs  type_norm.rs  types.rs  unify.rs  visibility_tracker.rs
src/adapter/: mod.rs  (+8 more)
tests/: codegen_tests.rs  full_pipeline.rs  reachability_tests.rs  semantics_tests.rs
(+493 files in other folders)
