[package]
name = "sypetype"
version = "0.1.0"
edition = "2024"
authors = ["Kevin <zhangkw@tongji.edu.cn>"]
description = "签名层协议可达性分析与见证代码生成器 - 基于 Colored Petri Net"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustdoc-types = "0.57.0"
indexmap = { version = "2.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"

[dependencies.tempfile]
version = "3.8"

