[package]
name = "RustSynth"
version = "0.1.0"
edition = "2024"
authors = ["Kevin <zhangkw@tongji.edu.cn>"]
description = "Pushdown CPN Safe Rust Synthesizer - 基于 Pushdown Colored Petri Net 的 Safe Rust 代码合成器"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustdoc-types = "0.57.0"
indexmap = { version = "2.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
smallvec = { version = "1.13", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"

